@@ -2,7 +2,6 @@ Seed                  , 15
 NrmMatrixFile         , ../Animal/Nrm.txt
 ModeMinCoancestry     , Yes
 NumberOfParents       ,  50
-LimitContributions    , Yes
 LimitContributionsMax ,   1
 MateAllocation        , No
 Stop
