@@ -3,9 +3,7 @@ GenderFile                  , Pools.txt
 NrmMatrixFile               , Nrm.txt
 SelCriterionFile            , Criterion.txt
 NumberOfMatings             , 32
-LimitMaleContributions      , Yes
 LimitMaleContributionsMax   ,  4
-LimitFemaleContributions    , Yes
 LimitFemaleContributionsMax ,  4
 TargetDegree                , 30
 Stop
