@@ -2,7 +2,6 @@ Seed                  , 15
 NrmMatrixFile         , Nrm.txt
 SelCriterionFile      , Criterion.txt
 NumberOfMatings       , 32
-LimitContributions    , Yes
 LimitContributionsMax , 10
 AllowSelfing          , Yes
 TargetDegree          , 30
